--- a/flower.css
+++ b/flower.css
@@ -13,24 +13,24 @@
 }
 
 body{
-    background-color: #FFF5E4;
+    background-color: #ffdfa8;
     min-height: 100vh;
     display: flex;
     flex-direction: column; /* Change the direction to column */
     align-items: center;
     justify-content: flex-start; /* Align items to the start of the container */
     overflow: hidden;
-	color: #FF9494;
+	color: #ff6868;
 	font-family: courier;
 }
 
 #thankyou {
     width: 100%; /* Ensure it spans the full width */
     text-align: center; /* Keep the text centered */
-    margin-top: 20px; /* Add some space at the top */
-    z-index: 1000; /* Ensure it's above other elements if needed */
+    /*margin-top: 20px; /* Add some space at the top */
+    /*z-index: 1000; /* Ensure it's above other elements if needed */
     position: relative; /* Adjust based on layout needs */
-	margin-bottom: 400px;
+	/*margin-bottom: 400px;*/
 	font-size: 50px;
 }
 
